# chewBBACA

./: .readthedocs.yaml  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  pyproject.toml  release.sh
.github/workflows/: chewbbaca.yml
CHEWBBACA/: chewBBACA.py  requirements.txt
CHEWBBACA/AlleleCall/: allele_call.py
CHEWBBACA/AlleleCallEvaluator/: evaluate_calls.py
CHEWBBACA/CHEWBBACA_NS/: synchronize_schema.py  upload_schema.py
CHEWBBACA/ComputeMSA/: compute_msa.py
CHEWBBACA/CreateSchema/: create_schema.py
CHEWBBACA/ExtractCgMLST/: determine_cgmlst.py
CHEWBBACA/GetAlleles/: get_alleles.py
CHEWBBACA/PrepExternalSchema/: adapt_schema.py
CHEWBBACA/SchemaEvaluator/: evaluate_schema.py
CHEWBBACA/UniprotFinder/: annotate_schema.py
CHEWBBACA/docs/: conf.py  index.rst
CHEWBBACA/docs/user/getting_started/: important_notes.rst  installation.rst
CHEWBBACA/docs/user/help_support/: faq.rst
CHEWBBACA/docs/user/modules/: AlleleCall.rst  AlleleCallEvaluator.rst  ComputeMSA.rst  CreateSchema.rst  DownloadSchema.rst  LoadSchema.rst  NSStats.rst  SyncSchema.rst
CHEWBBACA/docs/user/tutorials/: chewieNS_step_by_step.rst  chewie_step_by_step.rst
CHEWBBACA/report_template_components/: package-lock.json
CHEWBBACA/tests/: test_allelecall.py  test_arguments.py  test_createschema.py  test_prepexternalschema.py
CHEWBBACA/tests/data/allelecall_data/test_genes_list/test_genes_results/: invalid_cds.txt  results_alleles.tsv  (+2 more)
CHEWBBACA/tests/data/allelecallevaluator_data/expected_results/: allelecall_report.html  cgMLST.tree  cgMLST_profiles.tsv  distance_matrix_symmetric.tsv  masked_profiles.tsv  presence_absence.tsv  protein_msa.fasta
CHEWBBACA/tests/data/createschema_data/expected_results/: cds_coordinates.tsv  invalid_cds.txt
CHEWBBACA/utils/: constants.py  core_functions.py  fasta_operations.py  file_operations.py  gene_prediction.py  mafft_wrapper.py  multiprocessing_operations.py  parameters_validation.py  remove_genes.py  sequence_clustering.py  sequence_manipulation.py
(+2182 files in other folders)
