[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chewBBACA"
version = "3.5.4"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.13.0",
    "biopython>=1.86",
    "plotly>=6.3.1",
    "SPARQLWrapper>=2.0.0",
    "requests>=2.27.1",
    "pandas==2.3.3",
    "pyrodigal>=3.0.0"
]
authors = [
    {name = "Rafael Mamede"},
    {name = "Pedro Cerqueira"},
    {name = "Mickael Silva"},
    {name = "João Carriço"},
    {name = "Mário Ramirez"}
]
maintainers = [
  {name = "UMMI", email = "imm-bioinfo@medicina.ulisboa.pt"}
]
description = "A complete suite for gene-by-gene schema creation and strain identification."
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "bioinformatics",
    "genomics",
    "mlst",
    "bacteria",
    "cgmlst",
    "wgmlst",
    "outbreak detection",
    "allele calling",
    "bacterial typing",
    "bacterial genome analysis"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
"chewBBACA.py" = "CHEWBBACA.chewBBACA:main"
"chewie" = "CHEWBBACA.chewBBACA:main"

[project.urls]
Repository = "https://github.com/B-UMMI/chewBBACA"
Documentation = "https://chewbbaca.readthedocs.io/en/latest/index.html"
Changelog = "https://github.com/B-UMMI/chewBBACA/blob/master/CHANGELOG.md"
